# matrices_sum

./: LICENSE  README.md  main.cpp
openCL_pr/: CMakeLists.txt  main  main.cpp  sum_matrix.cl  test  tests  tests.cpp
openCL_pr/openCL_pr/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
